@@ -68,7 +68,7 @@ public class BuildInfoFactory {
 
 		@Override
 		public void setUseDefaultBuildCmd(boolean on) throws CoreException {
-			putString(USE_DEFAULT_BUILD_CMD, new Boolean(on).toString());
+			putString(USE_DEFAULT_BUILD_CMD, Boolean.valueOf(on).toString());
 		}
 
 		@Override
@@ -212,7 +212,7 @@ public class BuildInfoFactory {
 
 		@Override
 		public void setStopOnError(boolean enabled) throws CoreException {
-			putString(STOP_ON_ERROR, new Boolean(enabled).toString());
+			putString(STOP_ON_ERROR, Boolean.valueOf(enabled).toString());
 		}
 
 		@Override
@@ -286,7 +286,7 @@ public class BuildInfoFactory {
 
 		@Override
 		public void setAutoBuildEnable(boolean enabled) throws CoreException {
-			putString(BUILD_AUTO_ENABLED, new Boolean(enabled).toString());
+			putString(BUILD_AUTO_ENABLED, Boolean.valueOf(enabled).toString());
 		}
 
 		@Override
@@ -296,7 +296,7 @@ public class BuildInfoFactory {
 
 		@Override
 		public void setIncrementalBuildEnable(boolean enabled) throws CoreException {
-			putString(BUILD_INCREMENTAL_ENABLED, new Boolean(enabled).toString());
+			putString(BUILD_INCREMENTAL_ENABLED, Boolean.valueOf(enabled).toString());
 		}
 
 		@Override
@@ -306,7 +306,7 @@ public class BuildInfoFactory {
 
 		@Override
 		public void setFullBuildEnable(boolean enabled) throws CoreException {
-			putString(BUILD_FULL_ENABLED, new Boolean(enabled).toString());
+			putString(BUILD_FULL_ENABLED, Boolean.valueOf(enabled).toString());
 		}
 
 		@Override
@@ -316,7 +316,7 @@ public class BuildInfoFactory {
 
 		@Override
 		public void setCleanBuildEnable(boolean enabled) throws CoreException {
-			putString(BUILD_CLEAN_ENABLED, new Boolean(enabled).toString());
+			putString(BUILD_CLEAN_ENABLED, Boolean.valueOf(enabled).toString());
 		}
 
 		@Override
@@ -367,7 +367,7 @@ public class BuildInfoFactory {
 
 		@Override
 		public void setAppendEnvironment(boolean append) throws CoreException {
-			putString(BUILD_APPEND_ENVIRONMENT, new Boolean(append).toString());
+			putString(BUILD_APPEND_ENVIRONMENT, Boolean.valueOf(append).toString());
 		}
 
 		public boolean getBoolean(String property) {
